--- a/DocumentCentricStartUI/webapp/view/App.view.xml
+++ b/DocumentCentricStartUI/webapp/view/App.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="ibpm.demo.DocumentCentricStartUI.controller.App" xmlns:mvc="sap.ui.core.mvc" displayBlock="true" xmlns="sap.m">
+<mvc:View controllerName="com.sap.bpm.DocumentCentricStartUI.controller.App" xmlns:mvc="sap.ui.core.mvc" displayBlock="true" xmlns="sap.m">
 	<App id="app">
 	</App>
 </mvc:View>
